[gd_scene load_steps=68 format=3 uid="uid://bjoy36aqkfpx8"]

[ext_resource type="Script" uid="uid://rtt77pia3f8g" path="res://scenes/characters/player2/player2.gd" id="1_2tg80"]
[ext_resource type="Texture2D" uid="uid://dma1sn5aygr8o" path="res://assets/game/player/player_actions.png" id="2_2l1wu"]
[ext_resource type="Texture2D" uid="uid://bp4d6550r12il" path="res://assets/game/player/player.png" id="3_wgevu"]
[ext_resource type="Script" uid="uid://741848cqddoj" path="res://scripts/state_machine/node_state_machine.gd" id="4_68w3e"]
[ext_resource type="Script" uid="uid://b2eou21e36156" path="res://scenes/characters/player2/idle_state_player2.gd" id="5_2tg80"]
[ext_resource type="Script" uid="uid://dn2eap8r08rbr" path="res://scenes/characters/player2/walk_state_player2.gd" id="6_2tg80"]
[ext_resource type="Script" uid="uid://bfqgqc5cfydw4" path="res://scenes/characters/player2/chopping_state_player2.gd" id="7_2tg80"]
[ext_resource type="Script" uid="uid://djqym3xlbv1qp" path="res://scenes/characters/player2/tilling_state_player2.gd" id="8_2tg80"]
[ext_resource type="Script" uid="uid://db7qb5aofum71" path="res://scenes/characters/player2/watering_state_player2.gd" id="9_2tg80"]
[ext_resource type="PackedScene" uid="uid://bfdmxeo51jp8r" path="res://scenes/components/hit_component.tscn" id="10_ris6d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5x3"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrpk"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y75b"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tebod"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfx3"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnlq"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwvg"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4cy"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rto"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gk5"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0hd7"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpigg"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtrp"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5sa"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlma"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieypo"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulyr"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71adu"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfkpt"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxjks"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fy2q"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2npt"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kljnj"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lagvp"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4se6"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5ab"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omk8d"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghjy"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_72eiu"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr0sw"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejaeo"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkvr"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofe5m"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiw4v"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rnk"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8clsk"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba42v"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_em43t"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvt27"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4s5w"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsb6l"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1avqj"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4qpa"]
atlas = ExtResource("3_wgevu")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlnca"]
atlas = ExtResource("3_wgevu")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1q5g"]
atlas = ExtResource("3_wgevu")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chajt"]
atlas = ExtResource("3_wgevu")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afvx7"]
atlas = ExtResource("3_wgevu")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p0sf"]
atlas = ExtResource("3_wgevu")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl5g2"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiuwk"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5mos"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dynk0"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ge1t"]
atlas = ExtResource("2_2l1wu")
region = Rect2(0, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlcpy"]
atlas = ExtResource("2_2l1wu")
region = Rect2(48, 528, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_omk8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrpk")
}],
"loop": false,
"name": &"chopping_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y75b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tebod")
}],
"loop": false,
"name": &"chopping_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnlq")
}],
"loop": false,
"name": &"chopping_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0hd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpigg")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieypo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71adu")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfkpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxjks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fy2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2npt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kljnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lagvp")
}],
"loop": true,
"name": &"idle_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5ab")
}],
"loop": false,
"name": &"tilling_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kghjy")
}],
"loop": false,
"name": &"tilling_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72eiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0sw")
}],
"loop": false,
"name": &"tilling_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejaeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8clsk")
}],
"loop": true,
"name": &"walk_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em43t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvt27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4s5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsb6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1avqj")
}],
"loop": true,
"name": &"walk_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4qpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlnca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1q5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chajt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afvx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p0sf")
}],
"loop": true,
"name": &"walk_side",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl5g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiuwk")
}],
"loop": false,
"name": &"watering_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5mos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dynk0")
}],
"loop": false,
"name": &"watering_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ge1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlcpy")
}],
"loop": false,
"name": &"watering_side",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kghjy"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_djydg"]
radius = 5.0

[node name="Player2" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_2tg80")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_omk8d")
animation = &"idle_front"
autoplay = "idle_front"
frame_progress = 0.67693
offset = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_kghjy")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("4_68w3e")
initial_node_state = NodePath("Idle_P2")

[node name="Idle_P2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("5_2tg80")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Walk_P2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("6_2tg80")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Chopping_P2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("7_2tg80")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="Tilling_P2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("8_2tg80")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Watering_P2" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("9_2tg80")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="HitComponent" parent="." instance=ExtResource("10_ris6d")]

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_djydg")
debug_color = Color(1.15514e-06, 0.635947, 0.410993, 0.42)
